# Gemini_Agent

./: .gitattributes  agent.py  app.py  db.py  gemini_agent.db  packages.txt  pyproject.toml  readme.md  requirements.txt
.streamlit/: secrets.toml
tools/: calculator.py  summarizer.py  web_search.py
voice/: speech_to_text.py  text_to_speech.py
